--- a/Documents/NetBeansProjects/HoloCommerce/web/RSC/resource.css
+++ b/Documents/NetBeansProjects/HoloCommerce/web/RSC/resource.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,4 +71,3 @@ input{
     font-size: 15px;
     margin-bottom: 10px;
 }
-
