--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/drawable/editxtcustom.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/drawable/editxtcustom.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/transparan"/>
     <corners android:radius="10dp"/>
+    <solid android:color="@color/background"/>
     <stroke android:width="1dp" android:color="@color/black"/>
 </shape>
