--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/drawable/homepagetop.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/drawable/homepagetop.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:bottomRightRadius="15dp"
-        android:bottomLeftRadius="15dp"/>
-    <solid android:color="@color/mainColor"/>
+    <corners android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
+    <solid android:color="@color/white"/>
 </shape>
