--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_login.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.login.LoginActivity"
+    android:background="@color/background">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -34,7 +35,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppinsBold30"
-                android:text="Login"
+                android:text="LOGIN"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iconLogin" />
@@ -46,7 +47,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 style="@style/poppins15"
-                android:text="Silahkan login terlebih dahulu yaa !"
+                android:text="Please log in first to get started !"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
