--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.register.RegisterActivity">
+    tools:context=".ui.register.RegisterActivity"
+    android:background="@color/background">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/homepagetop"
+            android:elevation="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,6 +32,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:text="REGISTER"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="Silahkan register terlebih dahulu !"
+            android:text="Please register first to create your account"
             style="@style/poppinsMedium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +178,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             style="@style/poppinsBold20"
-            android:text="City"
+            android:text="Country"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +194,7 @@
             style="@style/poppinsMedium"
             android:paddingHorizontal="20dp"
             android:background="@drawable/editxtcustom"
-            android:hint="Jakarta"
+            android:hint="Input your country"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -214,12 +217,13 @@
 
         <TextView
             android:id="@+id/tvBackToLogin"
-            style="@style/poppinsBoldWhite20"
+            style="@style/poppinsBold20"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:text="Back to login"
+            android:translationZ="11dp"
             app:layout_constraintBottom_toBottomOf="@+id/bannerTop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
