--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_homepage.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_homepage.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomepageFragment">
+    tools:context=".ui.home.HomepageFragment"
+    android:background="@color/background">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,12 +20,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/homepagetop"
+                android:elevation="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvBeanalyze"
-                style="@style/poppinsBoldWhite25"
+                style="@style/poppinsBold25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -32,7 +34,8 @@
                 app:layout_constraintBottom_toBottomOf="@+id/bannerTop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/bannerTop" />
+                app:layout_constraintTop_toTopOf="@+id/bannerTop"
+                android:translationZ="11dp"/>
 
             <TextView
                 android:id="@+id/tvHello"
@@ -64,7 +67,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:columnCount="2"
-                android:background="@drawable/imgrounded"
                 android:rowCount="4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +87,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:background="@color/white">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -111,6 +114,7 @@
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     android:layout_margin="12dp"
+                    android:background="@color/white"
                     app:cardElevation="9dp"
                     app:cardCornerRadius="9dp">
 
@@ -118,7 +122,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:background="@color/white">
 
                         <ImageView
                             android:layout_width="match_parent"
