--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_setting.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_setting.xml
@@ -23,16 +23,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@drawable/homepagetop"
+                android:elevation="10dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/tvSetting"
-                style="@style/poppinsBoldWhite25"
+                style="@style/poppinsBold25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:text="Setting"
+                android:translationZ="11dp"
                 app:layout_constraintBottom_toBottomOf="@+id/bannerTop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +53,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnBack"
-                style="@style/poppinsBold15"
+                style="@style/poppinsBoldMain20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -62,13 +64,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageView2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/fptemplate"
+                android:src="@drawable/fprofile"
+                app:shapeAppearanceOverlay="@style/imageRounded"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/accountTxt" />
 
