--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/list_disease.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/list_disease.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp">
+    android:layout_marginVertical="8dp"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
