--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,7 @@
         android:id="@+id/SecondFragment"
         android:name="com.capstone.beanalyze.ui.disease.DiseaseListFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_history">
+        tools:layout="@layout/fragment_disease_list">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
