--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparan">#00FFFFFF</color>
+    <color name="background">#F5F5F5F5</color>
 </resources>
