--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_profile.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_profile.xml
@@ -146,6 +146,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvCityTxt" />
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loadingAnimate"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/loading" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
