--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_setting.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/fragment_setting.xml
@@ -100,6 +100,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/settingUsername" />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loadingAnimate"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bannerTop"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/loading" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
