--- a/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
+++ b/AndroidStudioProjects/Beanalyze/app/src/main/res/layout/activity_register.xml
@@ -213,26 +213,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvCity" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnregister"
-                    style="@style/poppinsBoldWhite20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/btncustom"
-                    android:paddingHorizontal="40dp"
-                    android:text="Register"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/etCity" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnregister"
+                style="@style/poppinsBoldWhite20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/btncustom"
+                android:paddingHorizontal="40dp"
+                android:text="Register"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etCity" />
 
             <TextView
                 android:id="@+id/tvBackToLogin"
                 style="@style/poppinsBold20"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:text="Back to login"
